rascunho do site final
Páginas feitas pelo Gaspar no Hugo. Porém a integração ainda não está
completa. Os links estão quebrados e o JS pode ser trocado por código do
Hugo.

Co-authored-by: Gabriel Gaspar Agostinho <gabrielgaspagostinho@users.noreply.github.com>

--- a/themes/temaharpia/layouts/_default/baseof.html
+++ b/themes/temaharpia/layouts/_default/baseof.html
@@ -19,7 +19,6 @@
 
 <title>{{ block "title" . }}{{ .Title }}{{ end }}</title>
 
-<!-- TODO: adicionar arquivo css nesse path -->
 <link rel="stylesheet" href="/css/style.css" type="text/css" media="all">
 
 <!-- TODO: adicionar favicon -->
@@ -27,9 +26,11 @@
 </head>
 <body>
 
-<header>{{ partial "header.html" . }}</header>
+{{ partial "header.html" . }}
 <main>{{ block "main" . }}{{ end }}</main>
 <footer>{{ partial "footer.html" . }}</footer>
+
+<script src="/js/scripts.js"></script>
 
 </body>
 </html>
