--- a/themes/temaharpia/layouts/_default/single.html
+++ b/themes/temaharpia/layouts/_default/single.html
@@ -1,4 +1,3 @@
 {{ define "main" }}
-  <div class="masshead"><h1>{{ .Title }}</h1></div>
-  <article>{{ .Content }}</article>
+  {{ .Content }}
 {{ end }}
