--- a/themes/temaharpia/layouts/partials/header.html
+++ b/themes/temaharpia/layouts/partials/header.html
@@ -2,10 +2,10 @@
 <img src="https://placehold.co/60x60/1a1a1a/f0f0f0?text=Logo" alt="Logo UFRJ Harpia" class="logo-nav">
 
 <ul class="nav-links">
-<li><a href="sobre-nos.html">Sobre Nós</a></li>
-<li><a href="nossa-equipe.html">Nossa Equipe</a></li>
-<li><a href="projetos.html">Projetos</a></li>
-<li><a href="contato.html">Contato</a></li>
+<li><a href="{{ "/" | relLangURL }}">Página Inicial</a></li>
+<li><a href="{{ "/nossa-equipe" | relLangURL }}">Nossa Equipe</a></li>
+<li><a href="{{ "/projetos" | relLangURL }}">Projetos</a></li>
+<li><a href="{{ "/contato" | relLangURL }}">Contato</a></li>
 </ul>
 
 <button class="hamburger-menu">
