--- a/themes/temaharpia/layouts/index.pt.html
+++ b/themes/temaharpia/layouts/index.pt.html
@@ -4,8 +4,7 @@
 
 <!-- Cabeçalho principal da página -->
 <div class="page-header">
-<!-- Substitua 'caminho/para/seu-logo.png' pelo caminho do logo do Harpia -->
-<img src="img/logo.png" alt="Logo UFRJ Harpia" class="logo">
+<img src="/img/logo.jpeg" alt="Logo UFRJ Harpia" class="logo">
 </div>
 
 <!-- Conteúdo principal -->
