--- a/themes/temaharpia/layouts/partials/header.html
+++ b/themes/temaharpia/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-<img src="https://placehold.co/60x60/1a1a1a/f0f0f0?text=Logo" alt="Logo UFRJ Harpia" class="logo-nav">
+<img src="/img/logo.jpeg" alt="Logo UFRJ Harpia" class="logo-nav">
 
 <ul class="nav-links">
 <li><a href="{{ "/" | relLangURL }}">Página Inicial</a></li>
