--- a/themes/temaharpia/layouts/_default/baseof.html
+++ b/themes/temaharpia/layouts/_default/baseof.html
@@ -28,7 +28,7 @@
 
 {{ partial "header.html" . }}
 <main>{{ block "main" . }}{{ end }}</main>
-<footer>{{ partial "footer.html" . }}</footer>
+<footer class="footer">{{ partial "footer.html" . }}</footer>
 
 <script src="/js/scripts.js"></script>
 
