adicionado texto historia

--- a/themes/temaharpia/layouts/index.pt.html
+++ b/themes/temaharpia/layouts/index.pt.html
@@ -14,7 +14,16 @@
 <h2>Nossa História</h2>
 <!-- Coloque aqui o texto sobre a história da equipe -->
 <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+A UFRJ Nautilus é uma equipe de competição de veículos autônomos da UFRJ. Foi criada em 2016 no departamento de engenharia naval da Universidade Federal do Rio de Janeiro e contava com a participação de 8 alunos de diferentes engenharias. No mesmo ano, participamos pela primeira vez da RoboSub, sendo o primeiro time da América do Sul a se inscrever na maior competição de AUVs do mundo.
+</p>
+<p>
+Em nossa primeira participação, a equipe levou o Vovozão, primeiro auv construído pela Nautilus totalmente custeado pelos membros, mas não conseguimos competir por problemas no transporte do robô. O ano de 2017 foi um ano de reconstrução da equipe e dos auvs. Contando com alguns patrocínios e uma maior quantidade de membros de diversos cursos, nosso time desenvolveu seu novo auv, o BR-Hue, que chegou em 27° lugar na competição de 2018 e nas semifinais de 2019.
+</p>
+<p>
+Durante o período de pandemia, mesmo em isolamento, nossos membros continuaram a desenvolver seus projetos, conquistando o 9° lugar e a premiação Holding Steady na RoboSub de 2020. Também neste ano, desenvolvemos nosso terceiro AUV e ampliamos nossa área de atuação, migrando de uma equipe de veículos autônomos subaquáticos para uma equipe de veículos autônomos, com a adição de um projeto de um drone autônomo.
+</p>
+<p>
+Atualmente, contamos com a participação de mais de quarenta membros de diversos cursos da UFRJ, divididos em cinco áreas de atuação: Gente e Gestão, Marketing, Eletrônica, Hidrodinâmica e Mecânica e Software. Prosseguimos valorizando o trabalho em equipe, no esforço de produzir tecnologia de ponta brasileira e de fácil acesso.
 </p>
 <img src="/img/equipe.png" alt="Foto da equipe 1" style="width: 100%; border-radius: 8px; margin-top: 1rem;">
 </section>
