--- a/themes/temaharpia/layouts/index.pt.html
+++ b/themes/temaharpia/layouts/index.pt.html
@@ -1,89 +1,6 @@
-{{ define "title" }}UFRJ Harpia{{ end }}
-
 {{ define "main" }}
 
-<!-- Cabeçalho principal da página -->
-<div class="page-header">
-<img src="/img/logo.jpeg" alt="Logo UFRJ Harpia" class="logo">
-</div>
-
-<!-- Conteúdo principal -->
-<div class="container">
-<!-- Seção: Nossa História -->
-<section class="section">
-<h2>Nossa História</h2>
-<!-- Coloque aqui o texto sobre a história da equipe -->
-<p>
-A UFRJ Nautilus é uma equipe de competição de veículos autônomos da UFRJ. Foi criada em 2016 no departamento de engenharia naval da Universidade Federal do Rio de Janeiro e contava com a participação de 8 alunos de diferentes engenharias. No mesmo ano, participamos pela primeira vez da RoboSub, sendo o primeiro time da América do Sul a se inscrever na maior competição de AUVs do mundo.
-</p>
-<p>
-Em nossa primeira participação, a equipe levou o Vovozão, primeiro auv construído pela Nautilus totalmente custeado pelos membros, mas não conseguimos competir por problemas no transporte do robô. O ano de 2017 foi um ano de reconstrução da equipe e dos auvs. Contando com alguns patrocínios e uma maior quantidade de membros de diversos cursos, nosso time desenvolveu seu novo auv, o BR-Hue, que chegou em 27° lugar na competição de 2018 e nas semifinais de 2019.
-</p>
-<p>
-Durante o período de pandemia, mesmo em isolamento, nossos membros continuaram a desenvolver seus projetos, conquistando o 9° lugar e a premiação Holding Steady na RoboSub de 2020. Também neste ano, desenvolvemos nosso terceiro AUV e ampliamos nossa área de atuação, migrando de uma equipe de veículos autônomos subaquáticos para uma equipe de veículos autônomos, com a adição de um projeto de um drone autônomo.
-</p>
-<p>
-Atualmente, contamos com a participação de mais de quarenta membros de diversos cursos da UFRJ, divididos em cinco áreas de atuação: Gente e Gestão, Marketing, Eletrônica, Hidrodinâmica e Mecânica e Software. Prosseguimos valorizando o trabalho em equipe, no esforço de produzir tecnologia de ponta brasileira e de fácil acesso.
-</p>
-<img src="/img/equipe.png" alt="Foto da equipe 1" style="width: 100%; border-radius: 8px; margin-top: 1rem;">
-</section>
-
-<!-- Seção: Missão e Valores -->
-<section class="section">
-<h2>Missão e Valores</h2>
-<!-- Coloque o texto sobre a missão e os valores da equipe -->
-<p>
-Nossa missão é desenvolver soluções inovadoras, promovendo o crescimento e a excelência de nossos membros. Valorizamos a colaboração, a inovação e o compromisso com a comunidade acadêmica.
-</p>
-<ul>
-<li><strong>Inovação:</strong> Buscamos sempre novas soluções e tecnologias.</li>
-<li><strong>Colaboração:</strong> Acreditamos no poder do trabalho em equipe.</li>
-<li><strong>Excelência:</strong> Nos esforçamos para atingir os mais altos padrões.</li>
-</ul>
-</section>
-
-<!-- Seção: Nossos Projetos (Exemplo)
-<section class="section">
-<h2>Nossos Projetos</h2>
-<p>
-Aqui você pode descrever alguns dos principais projetos ou conquistas da equipe.
-</p>
-<img src="caminho/para/foto-projeto.jpg" alt="Foto do projeto" style="width: 100%; border-radius: 8px; margin-top: 1rem;">
-</section>-->
-
-<!-- NOVA SEÇÃO: ONDE NOS ENCONTRAR -->
-<section class="section">
-<h2>Onde nos Encontrar</h2>
-<p>
-Nossa sede e laboratório estão localizados no Núcleo de Computação Eletrônica (NCE), no campus da Cidade Universitária (Fundão) da UFRJ. É aqui que nossos projetos ganham vida!
-</p>
-<div class="map-container">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3638.1956017133166!2d-43.23482382473596!3d-22.858262079289304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997938130da7d7%3A0x361a13ea50c1e06e!2sN%C3%BAcleo%20de%20Computa%C3%A7%C3%A3o%20Eletr%C3%B4nica%2FInstituto%20T%C3%A9rcio%20Pacitti%20de%20Aplica%C3%A7%C3%B5es%20e%20Pesquisas%20Computacionais%20(NCE%2FUFRJ)!5e1!3m2!1sfr!2sbr!4v1754719769929!5m2!1sfr!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
-</section>
-
-<!-- Seção de contato e redes sociais ATUALIZADA -->
-<section class="section">
-<h2>Siga-nos!</h2>
-<p>Fique por dentro das nossas novidades nas redes sociais:</p>
-<div class="social-links">
-<a href="https://www.instagram.com/ufrjnautilus" target="_blank">
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.162 6.162 6.162 6.162-2.759 6.162-6.162-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4s1.791-4 4-4 4 1.79 4 4-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg>
-<span>@ufrjnautilus</span>
-</a>
-<!--
-<a href="#" target="_blank">
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"/></svg>
-<span>Facebook</span>
-</a>
--->
-<a href="https://www.linkedin.com/company/ufrj-nautilus/" target="_blank">
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.59-11.018-3.714v-2.155z"/></svg>
-<span>UFRJ Nautilus</span>
-</a>
-</div>
-</section>
-</div>
+{{ .Content }}
 
 {{ end }}
 
