--- a/themes/temaharpia/layouts/_default/single.html
+++ b/themes/temaharpia/layouts/_default/single.html
@@ -1,3 +1,11 @@
 {{ define "main" }}
-  {{ .Content }}
+  <div class="page-header">
+    <h1>{{ .Title }}</h1>
+    {{ with .Params.description }}
+      <p>{{ . }}</p>
+    {{ end }}
+  </div>
+  <div class="container">
+    {{ .Content }}
+  </div>
 {{ end }}
