--- a/themes/temaharpia/layouts/index.pt.html
+++ b/themes/temaharpia/layouts/index.pt.html
@@ -1,6 +1,9 @@
 {{ define "main" }}
-
-{{ .Content }}
-
+  <div class="page-header">
+    <img src="/img/logo.jpeg" alt="Logo UFRJ Harpia" class="logo">
+  </div>
+  <div class="container">
+    {{ .Content }}
+  </div>
 {{ end }}
 
