--- a/static/css/style.css
+++ b/static/css/style.css
@@ -353,24 +353,13 @@ body {
 /* --- Página: Contato e Sobre Nós --- */
 .google-form-container,
 .map-container {
-    position: relative;
-    width: 100%;
-    padding-top: 150%; /* Proporção para formulários altos */
-    overflow: hidden;
-    border-radius: 8px;
-    margin-top: 1.5rem;
-}
-.map-container {
-    padding-top: 56.25%; /* Proporção 16:9 para mapas */
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
 }
 .google-form-container iframe,
 .map-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
 }
 .social-links {
     display: flex;
