--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,7 +51,7 @@ body {
     font-size: 2rem;
 }
 
-.section {
+section {
     background-color: var(--cor-secundaria);
     padding: 2rem;
     border-radius: 8px;
@@ -59,7 +59,7 @@ body {
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
 }
 
-.section h2 {
+section h2 {
     color: var(--cor-principal);
     border-bottom: 2px solid var(--cor-destaque);
     padding-bottom: 0.5rem;
@@ -416,7 +416,7 @@ body {
     .section-title {
         font-size: 1.7rem;
     }
-    .section h2 {
+    section h2 {
         font-size: 1.5rem;
     }
     .container {
