--- a/themes/temaharpia/layouts/index.html
+++ b/themes/temaharpia/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <div class="page-header">
-    <img src="/img/logo.jpeg" alt="Logo UFRJ Harpia" class="logo">
+    <img src="/img/logo.jpeg" alt="{{ i18n "logo-harpia" }}" class="logo">
   </div>
   <div class="container">
     {{ .Content }}
