--- a/themes/temaharpia/layouts/partials/header.html
+++ b/themes/temaharpia/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-<img src="/img/logo.jpeg" alt="Logo UFRJ Harpia" class="logo-nav">
+<img src="/img/logo.jpeg" alt="{{ i18n "logo-harpia" }}" class="logo-nav">
 
 <ul class="nav-links">
   {{ range site.Menus.main }}
