Ajustando detalhe da galeria

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -286,21 +286,39 @@ section h2 {
     margin-bottom: 2rem;
 }
 
+
 .imagem-gallery {
+	display: flex;
+	gap: 20px;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+}
+.imagem-gallery > img {
+	width: auto;
+	border-radius: 6px;
+	max-width: 300px;
+	transition: transform 0.3s ease;
+}
+.imagem-gallery img:hover {
+    transform: scale(1.04);
+}
+
+/*codigo da galeria de imagens antiga*/
+.image-gallery {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
 }
-
-.imagem-gallery img {
+.image-gallery img {
     width: 100%;
     border-radius: 8px;
     transition: transform 0.3s ease;
 }
-
-.imagem-gallery img:hover {
+.image-gallery img:hover {
     transform: scale(1.05);
 }
+
+
 
 .back-link-container {
     text-align: center;
@@ -490,16 +508,7 @@ section h2 {
     cursor: pointer;
 }
 
-.imagem-gallery {
-	display: flex;
-	gap: 20px;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
-}
-.imagem-gallery > img {
-	width: auto;
-	max-width: 300px;
-}
+
 
 /* ==========================================================================
    5. MEDIA QUERIES PARA RESPONSIVIDADE
@@ -621,4 +630,5 @@ section h2 {
     font-size: 1rem;
     color: var(--cor-texto-claro);
 }
+
 
